[gd_scene load_steps=3 format=3 uid="uid://jop6t3jokp62"]

[ext_resource type="Script" uid="uid://c3qi0fmtrt7qr" path="res://scenes/hazards/base_hazard.gd" id="1_bg0n4"]
[ext_resource type="PackedScene" uid="uid://d1l88lmumco1j" path="res://scenes/components/velocity/velocity_component.tscn" id="2_kvffu"]

[node name="BaseHazard" type="CharacterBody2D" groups=["hazards"]]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_bg0n4")

[node name="Components" type="Node" parent="."]

[node name="VelocityComponent" parent="Components" instance=ExtResource("2_kvffu")]
unique_name_in_owner = true
max_speed = 100
acceleration = 9.5

[node name="SelfDestructTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
